color key minor spacing fix

--- a/src/style.css
+++ b/src/style.css
@@ -140,6 +140,11 @@ header {
   transition-property: opacity, visibility;
   transition-duration: var(--trans-time);
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+
+  & p { margin: 0; }
 
   & .green { color: var(--normal-temp); }
   & .yellow { color: var(--warning-temp); }
